--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 #-------------------------- SOURCES -------------------------------------------#
-SRCS 		=	main.cpp  \
+SRCS 		=	main.cpp BitcoinExchange.cpp  \
 
 #--------------------------	VARIABLES -----------------------------------------#
 NAME		= btc
